--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ li div{
 form input{
     float: left;
     width: 38%;
-    margin: 0;
+    /* margin: 0; */
     border: 0;
     border-bottom: 1px solid #eee;
     margin: 0 1%;
