--- a/style.css
+++ b/style.css
@@ -100,6 +100,18 @@ button {
 	letter-spacing: 1px;
 	color: #999;
 }
-button:hover{
-    box-shadow:0 0 2px 2px #ccc
+button:hover {
+	box-shadow: 0 0 2px 2px #ccc;
+}
+.delete {
+	position: absolute;
+	right: 0;
+	top: 0;
+	margin: 0.5rem;
+	padding: 0.25rem;
+	background-color: #88236f;
+
+	color: #ccc;
+	font-size: 1rem;
+	border-radius: 5px;
 }
